cambio de texto

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive Website Travel</title>
+        <title>Curso de transformación</title>
     </head>
     <body>
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Travel</a>
+                <a href="#" class="nav__logo">Curso de transformación</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
@@ -381,8 +381,8 @@
             <div class="footer__container container grid">
                 <div class="footer__content grid">
                     <div class="footer__data">
-                        <h3 class="footer__title">Travel</h3>
-                        <p class="footer__description">Travel you choose the <br> destination, 
+                        <h3 class="footer__title">Curso de transformación</h3>
+                        <p class="footer__description">Curso de transformación you choose the <br> destination, 
                             we offer you the <br> experience.
                         </p>
                         <div>
