--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
            <!--========== SERVICES ==========-->
            <section class="services section bd-container" id="services">
-            <h2 class="section__title">Un proseso Centrado en ti</h2>
+            <h2 class="section__title">Un proceso Centrado en ti</h2>
 
             <div class="services__container  grid">
                 <div class="services__content">
