--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home" id="home">
-                <img src="assets/img/cambiode.jpeg" alt="" class="home__img">
+                <img src="assets/img/fakurian-design-58Z17lnVS4U-unsplash.jpg" alt="" class="home__img">
 
                 <div class="home__container container grid">
                     <div class="home__data">
