corriguir nombre de about

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </section>
             <!--==================== PRESENTATION ====================-->
             <section class="presentation section" id="about">
-                <h2 class="section__title"> Hola mi nombre es David Valentia</h2>
+                <h2 class="section__title"> Hola mi nombre es David Velandia</h2>
 
                 <div class="presentation__container container">
                     
