--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
             </section>
             <!--==================== PRESENTATION ====================-->
             <section class="presentation section" id="about">
-                <h2 class="section__title"> Hola mi nombre es David Velandia</h2>
+                <h2 class="section__title"> ¡Hola! Soy David Velandia</h2>
 
                 <div class="presentation__container container">
                     
-                    <p class="presentation__description presentation__name">Más de 30 años de experiencia en el área de consejería ( familiar, pareja, individual, resolución de conflictos, toma de decisiones) es el aval que te ofrezco para ser tu mentor en este curso de transformación que, sin duda alguna, producirá en ti un cambio radical y definitivo que te liberará de todas las cargas de tu pasado y así podrás brotar a un nuevo tiempo donde manifestarás tu verdadera identidad y esencia para el descubrimiento y cumplimiento de tu propósito.</p>
+                    <p class="presentation__description presentation__name">Con más de 30 años de experiencia en el área de consejería ( familiar, pareja, individual, resolución de conflictos, toma de decisiones) es el aval que te ofrezco para ser tu mentor en este curso de transformación que, sin duda alguna, producirá en ti un cambio radical y definitivo que te liberará de todas las cargas de tu pasado y así podrás brotar a un nuevo tiempo donde manifestarás tu verdadera identidad y esencia para el descubrimiento y cumplimiento de tu propósito.</p>
                    
                 </div>
             </section>
@@ -137,7 +137,7 @@
             <div class="services__container  grid">
                 <div class="services__content">
                     <svg class="services__img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" ><path d="M12 2a5 5 0 1 0 5 5 5 5 0 0 0-5-5zm0 8a3 3 0 1 1 3-3 3 3 0 0 1-3 3zm9 11v-1a7 7 0 0 0-7-7h-4a7 7 0 0 0-7 7v1h2v-1a5 5 0 0 1 5-5h4a5 5 0 0 1 5 5v1z"></path></svg>
-                    <h3 class="services__title">Auto Conocimiento</h3>
+                    <h3 class="services__title">Conocimiento</h3>
                     <p class="services__description">Proceso de cambio centrado en ti, para conocerte, sanarte y manifestar tu verdadera identidad</p>
                 </div>
 
