correccion de error en texto

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 <i class="bx bx-star testimonial__icon-star"></i>
                             </div>
                         </div>
-                        <p class="testimonial__description">Todos queremos ser transformados pero no queremos vivir el proceso. aprendí que
+                        <p class="testimonial__description">Todos queremos ser transformados pero no queremos vivir el proceso. Aprendí que
                              con el acompañamiento adecuado el cambio es real pero sobre todo definitivo.<br>Dejé de luchar, dejé de creer en mis fuerzas y cuestioné mis creencias, pero hoy puedo decir bendito el día que me animé a inscribirme en este curso.
                              ¡Acciones reales, cambios reales y una vida plena es lo que les espera si toman este curso!.</p>
 
