modificacion del footer

--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
             <div class="footer__container container grid">
                 <div class="footer__content grid">
                     <div class="footer__data">
-                        <h3 class="footer__title">Curso de transformación</h3>
-                        <p class="footer__description">Es el proceso que lleva<br> a morir a tu pasado <br>y brotar en tu verdadera esencia
+                        <h3 class="footer__title">"Cuando ya no somos capaces de cambiar una situación, nos encontramos ante el desafio de cambiarnos a nosotros mismos"</h3>
+                        <p class="footer__description">Viktor Frankl
                         </p>
                         <div>
                             <a href="https://wa.me/+593987236631?text=Me%20interesa%20el%20curso%20de%20transformación" target="_blank" class="footer__social">
