modificacion de img

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
 
                         <div class="home__info-overlay">
-                            <img src="assets/img/procesocambio.jpeg" alt="" class="home__info-img">
+                            <img src="assets/img/img1.png" alt="" class="home__info-img">
                         </div>
                     </div>
                 </div>
