cambio img home

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home" id="home">
-                <img src="assets/img/homeimg.jpeg" alt="" class="home__img">
+                <img src="assets/img/home.jpeg" alt="" class="home__img">
 
                 <div class="home__container container grid">
                     <div class="home__data">
                         
-                        <h1 class="home__data-title">No hay transformación <br><b> sin cambio <br>de pensamiento</b></h1>
+                        <h1 class="home__data-title"><b>No hay transformación <br> sin cambio <br>de pensamiento</b></h1>
                         <span class="home__data-subtitle">David Velandia</span>
                         <a href="https://wa.me/+593987236631?text=Me%20interesa%20el%20curso%20de%20transformación" class="button">Inscríbete Ahora</a>
 
