--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="services__container  grid">
                 <div class="services__content">
                     <svg class="services__img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" ><path d="M12 2a5 5 0 1 0 5 5 5 5 0 0 0-5-5zm0 8a3 3 0 1 1 3-3 3 3 0 0 1-3 3zm9 11v-1a7 7 0 0 0-7-7h-4a7 7 0 0 0-7 7v1h2v-1a5 5 0 0 1 5-5h4a5 5 0 0 1 5 5v1z"></path></svg>
-                    <h3 class="services__title">Auto Conocimiento</h3>
+                    <h3 class="services__title">Autoconocimiento</h3>
                     <p class="services__description">Proceso de cambio centrado en ti, para conocerte, sanarte y manifestar tu verdadera identidad</p>
                 </div>
 
