corrigiendo errores en el texto

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                                 <i class="bx bx-star testimonial__icon-star"></i>
                             </div>
                         </div>
-                        <p class="testimonial__description">Crecemos con creencias limitadas que nos atan a un futuro determinado por aquello que alguien dijo que así debe ser. Esa es la fuente de todas nuestras frustraciones. Cuando entendemos que somos creación de amor empieza nuestra verdadera transformación. hoy sé que tengo un propósito, ya tengo las herramientas y la guia,
-                             lo demás es solo cuestión de seguir dando los pasos correctos. no era quien creía ser hasta ese dia.</p>
+                        <p class="testimonial__description">Crecemos con creencias limitadas que nos atan a un futuro determinado por aquello que alguien dijo que así debe ser. Esa es la fuente de todas nuestras frustraciones. Cuando entendemos que somos creación de amor empieza nuestra verdadera transformación. Hoy sé que tengo un propósito, ya tengo las herramientas y la guia,
+                             lo demás es solo cuestión de seguir dando los pasos correctos. No era quien creía ser hasta ese dia.</p>
                     </div>
                     <!--==================== TESTIMONIAL 3====================-->
                     <div class="testimonial__content swiper-slide">
@@ -257,7 +257,7 @@
                                 <i class="bx bx-star testimonial__icon-star"></i>
                             </div>
                         </div>
-                        <p class="testimonial__description">Tuve la gran oportunidad de realizar el curso de transformación el cual me ayudó a cambiar mi forma de ver la vida. Me dio herramientas y me Capacitó para aplicarlas en todas 
+                        <p class="testimonial__description">Tuve la gran oportunidad de realizar el curso de transformación el cual me ayudó a cambiar mi forma de ver la vida. Me dio herramientas y me capacitó para aplicarlas en todas 
                             las áreas de mi vida; pude cambiar positivamente y ahora tengo una vida nueva en Dios.</p>
                     </div>
                 </div>
