colocando cierre de main

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
             </div>
         </section>
-
+   
         <!--==================== COUNTDOWN ====================-->
 
         <section id="countdown">
@@ -194,7 +194,7 @@
             <div class="testimonial__container container swiper-container">
                 <div class="swiper-wrapper">
                     
-                    <!--==================== TESTIMONIAL 2====================-->
+                    <!--==================== TESTIMONIAL 1====================-->
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
@@ -215,7 +215,7 @@
                         <p class="testimonial__description">Crecemos con creencias limitadas que nos atan a un futuro determinado por aquello que alguien dijo que así debe ser. Esa es la fuente de todas nuestras frustraciones. Cuando entendemos que somos creación de amor empieza nuestra verdadera transformación. Hoy sé que tengo un propósito, ya tengo las herramientas y la guia,
                              lo demás es solo cuestión de seguir dando los pasos correctos. No era quien creía ser hasta ese dia.</p>
                     </div>
-                    <!--==================== TESTIMONIAL 3====================-->
+                    <!--==================== TESTIMONIAL 2====================-->
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
@@ -239,7 +239,7 @@
 
                          <p class="testimonial__description"></p>
                     </div>
-                    <!--==================== TESTIMONIAL 1====================-->
+                    <!--==================== TESTIMONIAL 3====================-->
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
@@ -313,7 +313,7 @@
             </div>
         </section>
 
-    <!--==================== conclucion ====================-->
+    <!--==================== infocurso ====================-->
     <section class="presentation section" id="info">
         <h2 class="section__title">Información general del curso de transformación</h2>
 
@@ -327,7 +327,7 @@
         
         </div>
     </section>
-
+</main>
         <!--==================== FOOTER ====================-->
         <footer class="footer section">
             <div class="footer__container container grid">
